# rubik-solver

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENCE.md  README.md  RubikSolver.sln
include/: app.h  helper_gl.h
include/cube/: cube.h  model.h  move.h  solver.h  state.h
include/glsl/: glslCommonTools.h  program.h  shader.h
include/image/: stb_image.h  texture.h
include/logging/: algoparser.h  utils.h
include/meshes/: loader.h  meshsplitter.h
include/opengl/: camera.h  vao.h
include/ui/: keyboard.h  mouse.h  window.h
res/MeshChecker/: rubik_checker.blend
src/: CMakeLists.txt  COOL_IDEA.txt  app.cpp  main.cpp
src/cube/: cube.cpp  cube.h  cubemodel.cpp  cubiemodel.cpp  model.h  move.cpp  move.h  solver.cpp  solver.h  state.cpp  state.h
src/glfw/: keyboard.h  mouse.h  window.cpp  window.h
src/glsl/: glslCommonTools.h  program.cpp  shader.cpp
src/helpers/: helper_gl.h
src/image/: texture.cpp  texture.h
src/logging/: algoparser.cpp
src/meshes/: cyclic.cpp  cyclic.h  loader.cpp  loader.h  meshsplitter.h  perimeter.cpp  splitter.cpp  triangulation.cpp
src/opengl/: camera.cpp  camera.h  vao.cpp  vao.h
src/shaders/: fragment.glsl  vertex.glsl
src/splitter/: loader.cpp  loader.h
src/ui/: keyboard.cpp  mouse.cpp  window.cpp
